# csv

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README  aclocal.m4  conf2lib  configure  configure.ac
priv/: csv_example.erl  dset.sh  gen_set.pl  line-16.txt  line-48.txt  line-ex.txt
src/: csv.erl  csv_util.erl
test/: Makefile.am  Makefile.in  csv_tests.erl
